<resources>
    <string name="app_name">SimpleCar</string>
    <string name="login_email">Email</string>
    <string name="login_password">Senha</string>
    <string name="login_btnEntrar">Entrar</string>
    <string name="login_registrar">Não tem uma conta? Registre-se</string>
    <string name="login_register_nome">Nome completo</string>
    <string name="login_register_faca_login">Já tem uma conta? Faça o login</string>
    <string name="login_register_passwordAgain">Digite a senha novamente</string>
    <string name="login_btnRegistrar">Registrar</string>
    <string name="login_register_telefone">Telefone</string>
</resources>